mariaDB-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
